# TableDetection

./: README.md
cpp/: CMakeLists.txt  inference.cpp  inference.h  main.cpp  predictor.cpp  predictor.h  utils.cpp  utils.h
python/: inference.py  main.py  predictor.py  utils.py
